--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <div id="photoContainer">
       <!-- Remplace le lien par votre photo -->
-      <img src="C:\Users\Jihen\Downloads\jihen-s.jpg" alt="Photo" />
+      <img src="jihen-s.jpg" alt="Photo" />
     </div>
   </div>
 
